[gd_scene load_steps=5 format=2]

[ext_resource path="res://card/textures/grey_card.png" type="Texture" id=1]
[ext_resource path="res://reward_area/reward_card/reward_card.gd" type="Script" id=2]
[ext_resource path="res://reward_area/reward_area.tres" type="Resource" id=3]
[ext_resource path="res://card/resources/grey_card.tres" type="Resource" id=4]

[node name="RewardCard" type="TextureRect"]
margin_right = 64.0
margin_bottom = 96.0
texture = ExtResource( 1 )
script = ExtResource( 2 )
reward_area_resource = ExtResource( 3 )
card_resource = ExtResource( 4 )

[node name="NameLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 56.0
margin_bottom = 22.0

[node name="CostLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 24.0
margin_right = 56.0
margin_bottom = 38.0

[connection signal="gui_input" from="." to="." method="_on_RewardCard_gui_input"]
